failure in verify scheduling after 6792161

XMLWordPrintable

    • b10
    • b09
    • sparc
    • solaris_9

        The fix for 6792161 creates situations in the scheduler where the verification of the def/use of registers fails, again because the precedence edge isn't a real use. I think the fix has to be revisited.
        On 01/29 a bunch of tests in Comp_Baseline failed:
        # Internal Error
        (/tmp/jprt/P1/B/173357.kvn/source/src/share/vm/opto/output.cpp:2381),
        pid=8, tid=9
        # Error: after block local scheduling
        #
        http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-01-29/Comp_Baseline/javase/solaris-sparcv9/server/comp/solaris-sparcv9_server_comp_LANG_REGRESSION/analysis.html

        Test affects:

        java/lang/management/ManagementFactory/GetPlatformMXBeans.java
        java/lang/management/ManagementFactory/MBeanServerMXBeanUnsupportedTest.java
        java/lang/management/ManagementFactory/PlatformMBeanServerTest.java
        java/lang/management/MemoryMXBean/GetMBeanInfo.java
        java/lang/management/ThreadMXBean/ThreadInfoArray.java
        java/lang/management/GarbageCollectorMXBean/GcInfoCompositeType.java
        java/lang/management/MXBean/MXBeanBehavior.java
        java/lang/management/ManagementFactory/MXBeanException.java
        java/lang/management/ManagementFactory/MXBeanProxyTest.java
        java/lang/management/ManagementFactory/ProxyExceptions.java
        java/lang/management/ManagementFactory/ThreadMXBeanProxy.java

              Assignee:
              Tom Rodriguez
              Reporter:
              Tom Rodriguez
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: