6921992: failure in verify scheduling after 6792161

Reviewed-by: kvn